overflow fix?

--- a/app/client/css/main.css
+++ b/app/client/css/main.css
@@ -147,6 +147,7 @@ h2 {
 #app-view {
     position: relative;
     left: 20vw;
+    max-width: 80vw;
 }
 
 .app-screen {
